--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,8 +49,8 @@ x-airflow-common: &airflow-common
   # Image stored on Dockerhub
   image: ${DOCKERHUB_NAMESPACE}/${DOCKERHUB_REPOSITORY}:${IMAGE_TAG}
   # Use the .env file to read the connection params and variables - SWITCH THIS OFF WHEN USING GITHUB ACTIONS
-  env_file:
-    - .env
+  # env_file:
+  #   - .env
   environment: &airflow-common-env # Set executor to CeleryExecutor
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     # Use SQLAlchemy to connect to Airflow's metadata Postgres database using the psycopg2 driver
@@ -111,8 +111,8 @@ services:
     container_name: postgres
     image: postgres:13
     # Use the .env file to read the connection params - SWITCH THIS OFF WHEN USING GITHUB ACTIONS
-    env_file:
-      - .env
+    # env_file:
+    #   - .env
     # Env vars after POSTGRES_PASSWORD are needed for CI-CD workflow - SWITCH THIS ALL ON WHEN USING GITHUB ACTIONS
     environment:
       - POSTGRES_USER=${POSTGRES_CONN_USERNAME}
