--- a/.github/workflow/ci_cd_yt_elt.yaml
+++ b/.github/workflow/ci_cd_yt_elt.yaml
@@ -23,6 +23,7 @@ jobs:
           files: |
             Dockerfile
             requirements.txt
+            README.md
       - name: Set up Docker Buildx
         if: steps.changed-files-build.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
         uses: docker/setup-buildx-action@v3
@@ -79,6 +80,7 @@ jobs:
             dags/**
             include/**
             docker-compose.yaml
+            README.md
       - name: Set up Docker Compose
         if: steps.changed-files-tests.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
         run: docker compose up -d
