--- a/.github/workflows/ci_cd_yt_elt.yaml
+++ b/.github/workflows/ci_cd_yt_elt.yaml
@@ -87,13 +87,13 @@ jobs:
       - name: Run Unit and Integration Tests
         if: steps.changed-files-tests.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
         run: docker exec -t airflow-worker sh -c "pytest tests/ -v"
-      - name: Run End-to-End DAG Tests
-        if: steps.changed-files-tests.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
-        run: |
-          DAG_NAMES=("truncate_db" "produce_json" "update_db" "data_quality")
-          for DAG in "${DAG_NAMES[@]}"; do 
-            docker exec -t airflow-worker sh -c "airflow dags test $DAG"
-          done
+      # - name: Run End-to-End DAG Tests
+      #   if: steps.changed-files-tests.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
+      #   run: |
+      #     DAG_NAMES=("produce_json" "update_db" "data_quality")
+      #     for DAG in "${DAG_NAMES[@]}"; do 
+      #       docker exec -t airflow-worker sh -c "airflow dags test $DAG"
+      #     done
       - name: Tear down Docker Compose
         if: steps.changed-files-tests.outputs.any_changed == 'true' || github.event_name == 'workflow_dispatch'
         run: docker compose down
